# Deep_Neural_Network

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CMakePresets.json  CMakeSettings.json  Makefile  Matrix.cpp  Matrix.h  Neural Network.vcxproj  Neural Network.vcxproj.filters  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworks.cpp  Perceptron.cpp  Perceptron.h  README.md
Debug/: Neural Network.ilk  vc142.idb
Debug/Neural Network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Neural Network.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Resources/: NeuralNetwork_Notes.xopp  README.md
Tests/: CMakeLists.txt  main.cpp
Visual Studio/: Neural Network.sln  Neural Network.vcxproj
include/: Matrix.hpp  NeuralNetwork.hpp
libs/: CMakeLists.txt  platform.hpp
libs/IOPorts/: CMakeLists.txt
libs/IOPorts/include/: AbstractPort.hpp  PortUtils.hpp  SerialBuffer.hpp  SerialPort.hpp
libs/IOPorts/src/: SerialBuffer.cpp  SerialPortLinux.cpp  SerialPortMacos.cpp  SerialPortWin.cpp
libs/IPCom/: CMakeLists.txt
libs/IPCom/include/: BufferQueue.hpp  LockGuard.hpp  Platform.hpp  Semaphore.hpp  SharedAlloc.hpp  SharedBufferQueue.hpp  SharedMessage.hpp  SpinLock.hpp
libs/IPCom/src/: BufferQueue.cpp  SharedBufferQueue.cpp
libs/Logger/include/: Logger.hpp
libs/Logger/src/: Logger.cpp
libs/Matrix/: CMakeLists.txt
libs/Matrix/include/: Matrix.hpp
libs/Matrix/src/: Matrix.cpp  Matrix.hpp
libs/NeuralNetwork/include/: NeuralNetwork.hpp
libs/NeuralNetwork/src/: NeuralNetwork.cpp  NeuralNetwork.hpp
libs/Neurotic/: CMakeLists.txt
libs/Neurotic/include/: Neurotic.hpp
libs/Neurotic/src/: Neurotic.cpp
libs/RS232Comm/include/: AbstractPort.hpp  AbstractSerialPort.hpp  PortUtils.hpp  RS232Comm.hpp  SerialBuffer.hpp  SerialPort.hpp  SerialPortLinux.hpp  SerialPortWin.hpp
libs/RS232Comm/src/: RS232Comm.cpp  SerialBuffer.cpp  SerialPortLinux.cpp  SerialPortLinuxOld.cpp  SerialPortMacos.cpp  SerialPortWin.cpp  SerialPortWinOld.cpp
libs/RapidJson/: RapidJson.cmake
src/: CMakeLists.txt  MainWindow.cpp  Matrix.cpp  NeuralNetwork.cpp  main.cpp
src/include/: MainWindow.hpp
src/ui/: MainWindow.ui
tests/: CMakeLists.txt  main.cpp
